--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8" />
     </head>
     <body>
-        <p>Hello GitHub</p>
-        <p>Hello Git</p>
+        <p>Hello remote GitHub</p>
+        <p>Hello local Git</p>
     </body>
 </html>
